Minor css fixes

--- a/contracts/solidity/dashboard/src/css/app.less
+++ b/contracts/solidity/dashboard/src/css/app.less
@@ -13,9 +13,17 @@
 }
 
 .overview {
-  margin-top: 40px;
+  margin: 40px 0 40px 0;
+}
+
+.staking {
+  margin: 40px 0 40px 0;
 }
 
 .footer {
   padding: 40px;
+}
+
+.tab-pane {
+  padding: 15px;
 }
