--- a/contracts/solidity/dashboard/src/css/forms.less
+++ b/contracts/solidity/dashboard/src/css/forms.less
@@ -128,3 +128,10 @@
     color: @white;
   }
 }
+
+.signing-form {
+  .form-inline input.form-control, .well {
+    min-width: 500px;
+    overflow-wrap: break-word;
+  }
+}
