Make event success func handlers get distinct names
Because these exist in the package namespace, they can occasionally
clash (e.g. if two contracts are based on the same core lib and support
similar functionality like ownership transfers). To disambiguate, the
success function's type alias is prefixed with the contract name, in
addition to including the event's name.

--- a/pkg/chain/gen/contract_events.go.tmpl
+++ b/pkg/chain/gen/contract_events.go.tmpl
@@ -1,12 +1,12 @@
 {{- $contract := . -}}
 {{- range $i, $event := .Events }}
 
-type {{$event.LowerName}}Func func(
+type {{$contract.FullVar}}{{$event.CapsName}}Func func(
     {{$event.ParamDeclarations -}}
 )
 
 func ({{$contract.ShortVar}} *{{$contract.Class}}) Watch{{$event.CapsName}}(
-	success {{$event.LowerName}}Func,
+	success {{$contract.FullVar}}{{$event.CapsName}}Func,
 	fail func(err error) error,
 	{{$event.IndexedFilterDeclarations -}}
 ) (subscription.EventSubscription, error) {
