Tweak contract generation to align with needs
Account key is now taken in as a pointer argument instead of a copy, and
event callbacks always take the block number that the event was
triggered in as their last parameter.

--- a/pkg/chain/gen/contract.go.tmpl
+++ b/pkg/chain/gen/contract.go.tmpl
@@ -24,7 +24,7 @@ type {{.Class}} struct {
 
 func New{{.Class}}(
     contractAddress common.Address,
-    accountKey keystore.Key,
+    accountKey *keystore.Key,
     backend bind.ContractBackend,
 ) (*{{.Class}}, error) {
 	callerOptions := &bind.CallOpts{
