Add end-of-file newlines to contract template files

--- a/pkg/chain/gen/contract.go.tmpl
+++ b/pkg/chain/gen/contract.go.tmpl
@@ -65,4 +65,4 @@ func New{{.Class}}(
 {{template "contract_const_methods.go.tmpl" .}}
 
 // ------ Events -------
-{{template "contract_events.go.tmpl" .}}
+{{template "contract_events.go.tmpl" . -}}
