Resolve error for constant contract function calls
Use the same error resolver call for const methods as we do for
non-const methods. This way, we can resolve what's the underlying error
for calls not involving transactions.

--- a/pkg/chain/gen/contract_const_methods.go.tmpl
+++ b/pkg/chain/gen/contract_const_methods.go.tmpl
@@ -20,6 +20,15 @@ func ({{$contract.ShortVar}} *{{$contract.Class}}) {{$method.CapsName}}(
 		{{$method.Params}}
 	)
 
+	if err != nil {
+		return ret, {{$contract.ShortVar}}.errorResolver.ResolveError(
+			err,
+			nil,
+			"{{$method.LowerName}}",
+			{{$method.Params}}
+		)
+	}
+
 	{{ if $method.Return.Multi -}}
 	return ret, err
 	{{ else }}
