ErrorResolver now carries From information
When resolving errors, ErrorResolver has to reissue a contract call to
retrieve the return data and extract the error from it. Without the
correct From, msg.sender is not set correctly for the contract methods,
so the returned error is returned under different circumstances than
when the original transaction failed. Whoops!

--- a/pkg/chain/gen/contract_const_methods.go.tmpl
+++ b/pkg/chain/gen/contract_const_methods.go.tmpl
@@ -23,6 +23,7 @@ func ({{$contract.ShortVar}} *{{$contract.Class}}) {{$method.CapsName}}(
 	if err != nil {
 		return ret, {{$contract.ShortVar}}.errorResolver.ResolveError(
 			err,
+			{{$contract.ShortVar}}.callerOptions.From,
 			nil,
 			"{{$method.LowerName}}",
 			{{$method.Params}}
