Add global transaction submission mutex
When transactions are submitted, they require a valid nonce. The nonce
is equal to the count of transactions the account has submitted so far,
and for a transaction to be accepted it should be monotonically greater
than any previous submitted transaction. To do this, transaction
submission asks the Ethereum client it is connected to for the next
pending nonce, and uses that value for the transaction. Unfortunately,
if multiple transactions are submitted in short order, they may all get
the same nonce.

Currently, transaction submission does not require particularly high
throughput. As such, a new global transaction mutex acts to serialize
all transaction submissions, so that each transaction gets the
next valid nonce (which could be the same as a previous one if a
previous one fails gas estimation, for example).

This may require adjusting if higher throughputs end up being necessary.

--- a/pkg/chain/gen/contract.go.tmpl
+++ b/pkg/chain/gen/contract.go.tmpl
@@ -4,6 +4,8 @@
 package contract
 
 import (
+	"sync"
+
 	ethereumabi "github.com/ethereum/go-ethereum/accounts/abi"
 	"github.com/ethereum/go-ethereum/accounts/abi/bind"
 	"github.com/ethereum/go-ethereum/accounts/keystore"
@@ -21,12 +23,15 @@ type {{.Class}} struct {
 	callerOptions     *bind.CallOpts
 	transactorOptions *bind.TransactOpts
 	errorResolver     *ethutil.ErrorResolver
+
+	transactionMutex *sync.Mutex
 }
 
 func New{{.Class}}(
     contractAddress common.Address,
     accountKey *keystore.Key,
     backend bind.ContractBackend,
+    transactionMutex *sync.Mutex,
 ) (*{{.Class}}, error) {
 	callerOptions := &bind.CallOpts{
 		From: contractAddress,
@@ -58,6 +63,7 @@ func New{{.Class}}(
 		callerOptions:     callerOptions,
 		transactorOptions: transactorOptions,
 		errorResolver:     ethutil.NewErrorResolver(backend, &contractAbi, &contractAddress),
+		transactionMutex:  transactionMutex,
 	}, nil
 }
 
