--- a/pkg/chain/gen/contract_non_const_methods.go.tmpl
+++ b/pkg/chain/gen/contract_non_const_methods.go.tmpl
@@ -5,6 +5,9 @@ func ({{$contract.ShortVar}} *{{$contract.Class}}) {{$method.CapsName}}(
 	{{$method.ParamDeclarations -}}
 	{{if $method.Payable -}} value *big.Int, {{- end -}}
 ) (*types.Transaction, error) {
+	{{$contract.ShortVar}}.transactionMutex.Lock()
+	defer {{$contract.ShortVar}}.transactionMutex.Unlock()
+
 	{{if $method.Payable -}}
 	transactorOptions := &(*{{$contract.ShortVar}}.transactorOptions) // create a copy
 	transactorOptions.Value = value
