Generate <method>AtBlock for constant contract methods
These calls allow invoking a contract method with the state at a given
block, rather than the pending state.

--- a/pkg/chain/gen/contract_const_methods.go.tmpl
+++ b/pkg/chain/gen/contract_const_methods.go.tmpl
@@ -30,4 +30,26 @@ func ({{$contract.ShortVar}} *{{$contract.Class}}) {{$method.CapsName}}(
 	return result, err
 }
 
+func ({{$contract.ShortVar}} *{{$contract.Class}}) {{$method.CapsName}}AtBlock(
+	{{$method.ParamDeclarations -}}
+	{{if $method.Payable -}} value *big.Int, {{- end -}}
+	blockNumber *big.Int,
+) ({{$method.Return.Type}}, error) {
+	var result {{$method.Return.Type}}
+
+	err := ethutil.CallAtBlock(
+		{{$contract.ShortVar}}.callerOptions.From,
+		blockNumber,
+		{{$contract.ShortVar}}.contractABI,
+		{{$contract.ShortVar}}.caller,
+		{{$contract.ShortVar}}.errorResolver,
+		{{$contract.ShortVar}}.contractAddress,
+		"{{$method.LowerName}}",
+		&result,
+		{{$method.Params}}
+	)
+
+	return result, err
+}
+
 {{end -}}
