--- a/pkg/chain/gen/command.go.tmpl
+++ b/pkg/chain/gen/command.go.tmpl
@@ -46,6 +46,7 @@ func init() {
         Subcommands: []cli.Command{
             {{- $contract := . -}}
             {{- range $i, $method := .ConstMethods }}
+            {{- if $method.CommandCallable -}}
                 {
                     Name: "{{$method.DashedName}}",
                     Usage: "Calls the {{$method.Modifiers}} method {{$method.LowerName}} on the {{$contract.Class}} contract.",
@@ -54,6 +55,7 @@ func init() {
                     Before: argCountChecker({{$method.ParamInfos | len}}),
                     Flags: constFlags,
                 },
+            {{- end -}}
             {{- end -}}
         },
     })
