Support --block flag in const method commands
String up the <method>AtBlock generated contract method to the
blockFlagValue capturer for the --block flag and make everything work!

--- a/pkg/chain/gen/command.go.tmpl
+++ b/pkg/chain/gen/command.go.tmpl
@@ -81,8 +81,9 @@ func {{$contract.ShortVar}}{{$method.CapsName}}(c *cli.Context) error {
    	}
    	{{ end }}
 
-    result, err := contract.{{$method.CapsName}}(
-    	{{$method.Params}}
+    result, err := contract.{{$method.CapsName}}AtBlock(
+        {{$method.Params}}
+        blockFlagValue.Uint,
     )
 
     if err != nil {
