--- a/pkg/chain/gen/contract_const_methods.go.tmpl
+++ b/pkg/chain/gen/contract_const_methods.go.tmpl
@@ -40,6 +40,7 @@ func ({{$contract.ShortVar}} *{{$contract.Class}}) {{$method.CapsName}}AtBlock(
 	err := ethutil.CallAtBlock(
 		{{$contract.ShortVar}}.callerOptions.From,
 		blockNumber,
+		nil,
 		{{$contract.ShortVar}}.contractABI,
 		{{$contract.ShortVar}}.caller,
 		{{$contract.ShortVar}}.errorResolver,
