Fix formatting for generated contract submit methods
Submission methods only have a value parameter when the contract method
is marked payable, but when these were emitted they were formatted
poorly with respect to proper Go formatting. This tweak fixes that
issue.

--- a/pkg/chain/gen/contract_non_const_methods.go.tmpl
+++ b/pkg/chain/gen/contract_non_const_methods.go.tmpl
@@ -1,9 +1,12 @@
 {{- $contract := . -}}
 {{- range $i, $method := .NonConstMethods }}
 
+// Transaction submission.
 func ({{$contract.ShortVar}} *{{$contract.Class}}) {{$method.CapsName}}(
 	{{$method.ParamDeclarations -}}
-	{{if $method.Payable -}} value *big.Int, {{- end -}}
+	{{- if $method.Payable -}}
+	value *big.Int,
+	{{ end -}}
 ) (*types.Transaction, error) {
 	{{$contract.ShortVar}}.transactionMutex.Lock()
 	defer {{$contract.ShortVar}}.transactionMutex.Unlock()
