--- a/pkg/chain/gen/contract_non_const_methods.go.tmpl
+++ b/pkg/chain/gen/contract_non_const_methods.go.tmpl
@@ -36,4 +36,43 @@ func ({{$contract.ShortVar}} *{{$contract.Class}}) {{$method.CapsName}}(
 	return transaction, err
 }
 
+{{- $returnVar := print "result, " -}}
+{{ if eq $method.Return.Type "" -}}
+{{- $returnVar = "" -}}
+{{- end }}
+
+// Non-mutating call, not a transaction submission.
+func ({{$contract.ShortVar}} *{{$contract.Class}}) Call{{$method.CapsName}}(
+	{{$method.ParamDeclarations -}}
+	{{- if $method.Payable -}}
+	value *big.Int,
+	{{ end -}}
+	blockNumber *big.Int,
+) ({{- if gt (len $method.Return.Type) 0 -}} {{$method.Return.Type}}, {{- end -}} error) {
+	{{- if gt (len $method.Return.Type) 0 }}
+	var result {{$method.Return.Type}}
+	{{- else }}
+	var result interface{} = nil
+	{{- end }}
+
+	err := ethutil.CallAtBlock(
+		{{$contract.ShortVar}}.transactorOptions.From,
+		blockNumber,
+		{{- if $method.Payable -}}
+		value,
+		{{ else -}}
+		nil,
+		{{ end -}}
+		{{$contract.ShortVar}}.contractABI,
+		{{$contract.ShortVar}}.caller,
+		{{$contract.ShortVar}}.errorResolver,
+		{{$contract.ShortVar}}.contractAddress,
+		"{{$method.LowerName}}",
+		&result,
+		{{$method.Params}}
+	)
+
+	return {{$returnVar}}err
+}
+
 {{- end -}}
