Contract commands pass real transaction mutex to contract bindings
Before the mutex was nil, but there were no non-const methods that
needed it so this wasn't a problem. With non-const methods, the mutex
has to be non-nil.

--- a/pkg/chain/gen/command.go.tmpl
+++ b/pkg/chain/gen/command.go.tmpl
@@ -129,6 +129,6 @@ func initialize{{.Class}}(c *cli.Context) (*contract.{{.Class}}, error) {
         address,
         key,
         client,
-        nil,
+        &sync.Mutex{},
     )
 }
