Setting port and rpcport so the proper listeners are started
I got my wires crossed in configuring the Bitcoin node and forgot to set
the listeners.  This resulted in us not being able to access the node
over RPC.

--- a/infrastructure/terraform/keep-dev/config-files/bitcoin-values.yaml.tmpl
+++ b/infrastructure/terraform/keep-dev/config-files/bitcoin-values.yaml.tmpl
@@ -6,5 +6,7 @@ configurationFile:
     ${printtoconsole}
     ${testnet}
     ${txindex}
+    ${port}
+    ${rpcport}
     ${rpcuser}
     ${rpcpassword}
