Add transaction logging to generated contracts
Currently, only transactions are logged; that is, simple calls are not
logged. Transactions log the method that is being invoked, the values
being passed to it, any ETH value that is included, and, if the
transaction submits successfully, the hash of the resulting transaction.

Notably, each contract gets its own logger. This logger starts with
keep-contract-, followed by the name of the contract class. This allows
for setting the log level on all contracts with `keep-contract-*`, as
well as setting a per-contract log level with e.g.
`keep-contract-KeepRandomBeaconService`.

--- a/pkg/chain/gen/contract.go.tmpl
+++ b/pkg/chain/gen/contract.go.tmpl
@@ -19,6 +19,11 @@ import (
 	"github.com/keep-network/keep-core/pkg/subscription"
 )
 
+// Create a package-level logger for this contract. The logger exists at
+// package level so that the logger is registered at startup and can be
+// included or excluded from logging at startup by name.
+var {{.ShortVar}}Logger = log.Logger("keep-contract-{{.Class}}")
+
 type {{.Class}} struct {
 	contract          *abi.{{.AbiClass}}
 	contractAddress   common.Address
