Add ipfs/go-log import to contract template
This was auto-resolving, but in a strange way that made the build fail
in certain circumstances.

--- a/pkg/chain/gen/contract.go.tmpl
+++ b/pkg/chain/gen/contract.go.tmpl
@@ -14,6 +14,8 @@ import (
 	"github.com/ethereum/go-ethereum/common"
 	"github.com/ethereum/go-ethereum/core/types"
 
+	"github.com/ipfs/go-log"
+
 	"github.com/keep-network/keep-core/pkg/chain/ethereum/ethutil"
 	"github.com/keep-network/keep-core/pkg/chain/gen/abi"
 	"github.com/keep-network/keep-core/pkg/subscription"
