--- a/infrastructure/terraform/keep-dev/config-files/jupyterhub-values.yaml.tmpl
+++ b/infrastructure/terraform/keep-dev/config-files/jupyterhub-values.yaml.tmpl
@@ -1,7 +1,7 @@
 auth:
   type: google
   google:
-    clientId: "42518614489-elr1i0khrg215fo6ic7iqp20e5i7kdat.apps.googleusercontent.com"
+    clientId: ${clientId}
     clientSecret: ${clientSecret}
     callbackUrl: "http://jupyterhub.research.keep.network/hub/oauth_callback"
     hostedDomain: "thesis.co"
