Simplified button content animation styles

--- a/contracts/solidity/dashboard/src/css/buttons.less
+++ b/contracts/solidity/dashboard/src/css/buttons.less
@@ -53,20 +53,12 @@ fieldset[disabled] .btn {
 }
 
 .button-content {
-  &-enter {
+  &-enter, &-exit {
     opacity: 0;
 
     &-active {
       opacity: 1;
       transition: opacity .5s ease-in;
-    }
-  }
-  &-exit {
-    opacity: 0;
-
-    &-active {
-      opacity: 1;
-      transition: opacity .5s ease-in,
     }
   }
 }
