--- a/solidity-v1/dashboard/src/css/app.less
+++ b/solidity-v1/dashboard/src/css/app.less
@@ -90,9 +90,7 @@ ul {
   grid-template-columns: @side-menu-width 1fr;
   grid-template-rows: 1fr;
   grid-auto-rows: auto;
-  grid-template-areas:
-    "side-bar content"
-    "footer content";
+  grid-template-areas: "side-bar content";
   overflow: hidden;
 
   .app__header {
@@ -125,7 +123,6 @@ ul {
   }
 
   .app__footer {
-    grid-area: footer;
     background: @side-menu-color;
     border-right: 1px solid @color-grey-30;
     padding: 1.5rem 1.5rem;
