Add tooltip to disabled `undelegate` btn
Adds tooltip that informs the user that he can't undelegate stake that is
already moved to T.

--- a/solidity-v1/dashboard/src/css/buttons.less
+++ b/solidity-v1/dashboard/src/css/buttons.less
@@ -210,3 +210,11 @@ a.btn {
     content: "";
   }
 }
+
+.undelegate-stake-btn {
+  &:disabled {
+    color: @color-grey-40;
+    background-color: @color-grey-20;
+    //pointer-events: auto;
+  }
+}
