--- a/solidity-v1/dashboard/src/css/tooltip.less
+++ b/solidity-v1/dashboard/src/css/tooltip.less
@@ -154,6 +154,7 @@
   background-color: @color-black !important;
   font-variant: none;
   text-transform: none;
+  border-radius: 8px !important;
 
   &--arrow-right {
     &::after {
