Restyle btns in delegations and undelegations table

--- a/solidity-v1/dashboard/src/css/buttons.less
+++ b/solidity-v1/dashboard/src/css/buttons.less
@@ -211,10 +211,9 @@ a.btn {
   }
 }
 
-.undelegate-stake-btn {
+.undelegate-stake-button {
   &:disabled {
     color: @color-grey-40;
     background-color: @color-grey-20;
-    //pointer-events: auto;
   }
 }
