--- a/solidity-v1/dashboard/src/css/commons.less
+++ b/solidity-v1/dashboard/src/css/commons.less
@@ -177,6 +177,10 @@ hr {
     &.center {
       align-items: center;
     }
+
+    &.justify-right {
+      justify-content: right;
+    }
   }
 
   &.wrap {
