Add links to tooltips
Add links to threshold dapp and nucypher docs for tooltips in THreshold
Authorization tabl.

--- a/solidity-v1/dashboard/src/css/tooltip.less
+++ b/solidity-v1/dashboard/src/css/tooltip.less
@@ -160,4 +160,13 @@
       left: 89% !important;
     }
   }
+
+  &--stay-on-hover {
+    pointer-events: auto !important;
+
+    &:hover {
+      visibility: visible !important;
+      opacity: 1 !important;
+    }
+  }
 }
