Display a permanent ribbon banner
Explaining that the Keep Token Dashboard is a legacy dashboard.

--- a/solidity-v1/dashboard/src/css/vars.less
+++ b/solidity-v1/dashboard/src/css/vars.less
@@ -45,6 +45,8 @@
 @color-yellow-50: #faad14;
 @color-yellow-60: #ffce88;
 @color-yellow-100: #ff9900;
+@color-yellow-400: #ffc53d;
+@color-yellow-900: #613400;
 
 // status
 @color-green: #118263;
@@ -107,6 +109,7 @@
   // TODO remove brand-violet-100
   brand-violet-100: @color-brand-violet-100;
   yellow-100: @color-yellow-100;
+  yellow-900: @color-yellow-900;
 };
 
 @bg-colors: {
@@ -127,6 +130,7 @@
   mint-80: @color-mint-80;
   mint-100: @color-mint-100;
   yellow-30: @color-yellow-30;
+  yellow-400: @color-yellow-400;
   violet-100: @color-brand-violet-100;
   violet-80: @color-brand-violet-80;
   violet-40: @color-brand-violet-40;
