Add legacy badge to the side menu

--- a/solidity-v1/dashboard/src/css/vars.less
+++ b/solidity-v1/dashboard/src/css/vars.less
@@ -45,6 +45,7 @@
 @color-yellow-50: #faad14;
 @color-yellow-60: #ffce88;
 @color-yellow-100: #ff9900;
+@color-yellow-300: #ffd666;
 @color-yellow-400: #ffc53d;
 @color-yellow-900: #613400;
 
@@ -131,6 +132,7 @@
   mint-100: @color-mint-100;
   yellow-30: @color-yellow-30;
   yellow-400: @color-yellow-400;
+  yellow-300: @color-yellow-300;
   violet-100: @color-brand-violet-100;
   violet-80: @color-brand-violet-80;
   violet-40: @color-brand-violet-40;
