Fix WalletConnect icon in top right corner
The wallet connect icon was not displayed in top right corner (next to the
address) when we connected via WalletConnect.

--- a/solidity-v1/dashboard/src/css/commons.less
+++ b/solidity-v1/dashboard/src/css/commons.less
@@ -377,6 +377,10 @@ svg.wallet-connect-logo,
 svg.plus-icon,
 svg.chevron-right-icon,
 svg.success-icon {
+  &--small-size {
+    max-width: 25px;
+    max-height: 25px;
+  }
   &--black {
     path {
       fill: @color-black;
